<resources>
    <string name="app_name">RSRVD</string>
    <string name="running_sign_up_image">running sign up image</string>
    <string name="welcome_to">welcome to</string>
    <string name="rsrvd">rsrvd</string>
    <string name="connect_with_google">connect with google</string>
    <string name="explore_reserve_live">EXPLORE\t\t\t\t\tRESERVE\t\t\t\tLIVE\t\t\t\tEXPLORE\t\t\t\tRESERVE\t\t\t\tLIVE\t\t\t\tEXPLORE\t\t\t\tRESERVE\t\t\t\tLIVE\t\t\t\tEXPLORE\t\t\t\tRESERVE\t\t\t\tLIVE\t\t\t\tEXPLORE\t\t\t\tRESERVE\t\t\t\tLIVE\t\t\t\tEXPLORE\t\t\t\tRESERVE\t\t\t\tLIVE</string>
    <string name="explore_the_app_first">I want to explore the app first</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="about_you">tell us more\nabout you</string>
    <string name="sport_photo">sport photo</string>
    <string name="location">your location</string>
    <string name="maps_icon">maps icon</string>
    <string name="select_location">Select location</string>
    <string name="interests">select your interests</string>
    <string name="ready">i\'m ready</string>
    <string name="search_icon">search icon</string>
    <string name="placeholder_for_empty_search">Placeholder for empty search</string>
    <string name="back_to_onboarding">Back to onboarding</string>
    <string name="hello_world">Hello world!</string>
    <string name="save_changes">save changes</string>
    <string name="exit_editing_profile">exit editing profile</string>
    <string name="edit_profile">edit\nprofile</string>
    <string name="current_location">Current location</string>
    <string name="explore">Explore</string>
    <string name="reservations">Reservations</string>
    <string name="profile">Profile</string>
    <string name="profile_location">LOCATION</string>
    <string name="profile_activities">ACTIVITIES COMPLETED</string>
    <string name="profile_interests">INTERESTS</string>
    <string name="profile_reminder">ACTIVITY REMINDER</string>
    <string name="profile_legal">LEGAL</string>
    <string name="profile_terms">Terms of Service</string>
    <string name="profile_privacy">Privacy Policy</string>
    <string name="profile_logout">LOG OUT</string>
    <string-array name="spinner_array">
        <item>10 minutes before</item>
        <item>30 minutes before</item>
        <item>1 hour before</item>
    </string-array>
    <string name="sport_activity">sport activity</string>
    <string name="read_more">Read more</string>
    <string name="search_venue">Search venue</string>
    <string name="recently_visited">recently visited</string>
    <string name="we_recommend">we recommend</string>
    <string name="we_recommend_script">Increase weekly training\nmileage by no more than 10\npercent per week.</string>
    <string name="we_recommend_placeholder">we recommend placeholder</string>
    <string name="see_all_venues">See all venues</string>
    <string name="details_place_holder">running / 1.2 km away</string>
    <string name="account">account</string>
    <string name="create">create</string>
    <string name="running">running</string>
    <string name="cancel_filtering">cancel filtering</string>
    <string name="date">date</string>
    <string name="refine_results">refine results</string>
    <string name="see_results">see results</string>
    <string name="_12_august_2019">12 August, 2019</string>
    <string name="yellow_shapes">yellow shapes</string>
    <string name="clear_filters">clear filters</string>
    <string name="search_results">search results</string>
    <string name="no_results">no results</string>
    <string name="don_t_give_up">don\'t give up, just try again.</string>
    <string name="clear_search_term">clear search term</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="reservation_fragment">Reservation fragment</string>
    <string name="profile_fragment">Profile fragment</string>
    <string name="distance_away">\t/\t %s away</string>
    <string name="meters">%d m</string>
    <string name="kilometers">%.2f km</string>
    <string name="loading">Loading… Please wait</string>
    <string name="pick_location">Pick a location</string>
    <string name="log_out_prompt">Are you sure you want to log out?</string>
    <string name="log_out">Log out</string>
    <string name="cancel">Cancel</string>
    <string name="profile_picture">Logged in user profile picture</string>
    <string name="art">art</string>
    <string name="edit_icon">edit icon</string>
    <string name="no_filters">No filter applied!</string>
    <string name="updated">Updated</string>
    <string name="failed">Failed</string>
    <string name="venue_details_image">Venue Details Image</string>
    <string name="venue_name">venue name</string>
    <string name="make_a_reservation">make a reservation</string>
    <string name="open">open</string>
    <string name="weekly_program">weekly program</string>
    <string name="activities">activities</string>
    <string name="football">football</string>
    <string name="tennis">tennis</string>
    <string name="basketball">basketball</string>
    <string name="volley">volley</string>
    <string name="badminton">badminton</string>
    <string name="handball">handball</string>
    <string name="workout">workout</string>
    <string name="location_text_view">location</string>
    <string name="get_direction">Get directions</string>
    <string name="good_to_know">good to know</string>
    <string name="parking">parking</string>
    <string name="restaurant">restaurant</string>
    <string name="accessible">accessible</string>
    <string name="toilet">toilet</string>
    <string name="description">description</string>
    <string name="location_description">%s, \n%s</string>
    <string name="youtube_video">youtube video</string>
    <string name="have_a_tour">have a virtual tour</string>
    <string name="sport_base">sport base gheorgheni</string>
    <string name="forward">forward</string>
    <string name="arrow_back">arrow back</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="filter_date">%d %s, %d</string>
    <string name="time">%s:%s %s</string>
    <string name="timepicker_exception">TIMEPICKER</string>
    <string name="timepicker_exception2">TIMEPICKER2</string>
    <string name="dashed_separator">dashed separator</string>
    <string name="interval_too_short">Interval must be at least 30 minutes long and in the future</string>
    <string name="filter_date_exception">Date should be in the future</string>
    <string name="tabname_upcoming">UPCOMING</string>
    <string name="tabname_history">HISTORY</string>
    <string name="reservation_date_format">%1$d %2$s, %3$d</string>
    <string name="reservation_hour_format">%1$s:%2$s %3$s</string>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="AM">AM</string>
    <string name="PM">PM</string>
    <string name="double_digit_format">0%1$d</string>
    <string name="back_button">back button</string>
    <string name="reservation_details">"reservation\ndetails"</string>
    <string name="reservation_time">time</string>
    <string name="cancel_reservation">cancel reservation</string>
    <string name="reservation_image">reservation image</string>
    <string name="make_a_reservation_newline">make a \nreservation</string>
    <string name="venue_name_reservation">venue name reservation</string>
    <string name="what_you_like">what you\'d like to do</string>
    <string name="how_long_to_stay">how long would you stay?</string>
    <string name="hour">hour</string>
    <string name="reservation_sent">reservation sent</string>
    <string name="confirmation_message">your reservation will be valid after being confirmed by the venue admin</string>
    <string name="send_reservation">send reservation</string>
    <string name="please_select_activity">Please select what you\'d like to do</string>
    <string name="name1">gertrude rose</string>
    <string name="review1">Clean and full of healthy activities. The location is nice and modern, highly recommend!</string>
    <string name="name2">barry graves</string>
    <string name="review2">Great area of Seoul ... great when the Korean Football League and Korean Baseball League is runnung... always a game there apart from Monday\'s for the baseball... and a good family based team calles Seoul E-Land play in the Seoul Olympic stadium ... watch football in a piece of history. The Stadium of the 1988 Seoul olympics...</string>
    <string name="divider_short">\t-\t\t</string>
    <string name="google_maps">google.navigation:q=%f,%f</string>
</resources>
