<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="signUpViewModel"
            type="com.halcyonmobile.rsrvd.profile.signup.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout_sign_up">

        <ImageView
            android:id="@+id/running_image_view_sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/running_sign_up_image"
            android:src="@drawable/img_authentication_running"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcome_to_rsrvd_text_view_signup"
            android:textAppearance = "?attr/textAppearanceHeadline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/long_margin"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/running_image_view_sign_up"
            app:layout_constraintTop_toBottomOf="@id/running_image_view_sign_up"
            android:text="@string/create" />

        <TextView
            android:id="@+id/rsrvd_text_view_signup"
            android:text="@string/account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance = "?attr/textAppearanceHeadline3"
            android:textAllCaps="true"
            android:textColor="@color/primary"
            android:layout_marginStart="@dimen/long_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_to_rsrvd_text_view_signup"
            app:layout_constraintBottom_toTopOf="@id/expl_rsrvd_live_first_text_view_signup" />

        <TextView
            android:id="@+id/expl_rsrvd_live_first_text_view_signup"
            android:layout_width="@dimen/width_text_view_anim"
            android:layout_height="wrap_content"
            android:text="@string/explore_reserve_live"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:textIsSelectable="true"
            android:textAllCaps="true"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:layout_constraintTop_toBottomOf="@id/rsrvd_text_view_signup"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/connect_google_button_signup"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_btn_connect_sgnin"
            android:layout_marginStart="@dimen/long_margin"
            android:layout_marginEnd="@dimen/long_margin"
            android:layout_marginBottom="@dimen/medium_margin"
            android:text="@string/connect_with_google"
            app:icon="@drawable/ic_google"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textAllCaps="true"
            style="@style/MaterialComponents.Button.Icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>