<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/side_guide" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/side_guide" />

    <TextView
        android:id="@+id/name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/long_margin"
        android:text="@string/name1"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.Subtitle1"
        android:textColor="@color/light_gray"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/ratingStars"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isIndicator="true"
        android:numStars="5"
        android:progressTint="@color/primary"
        android:rating="5"
        android:stepSize="1"
        app:layout_constraintBottom_toBottomOf="@id/name1"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/name1" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/review1"
        android:textAppearance="@style/TextAppearance.Body1"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/name1" />

    <TextView
        android:id="@+id/name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/long_margin"
        android:text="@string/name2"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.Subtitle1"
        android:textColor="@color/light_gray"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/text1" />

    <RatingBar
        android:id="@+id/ratingStars2"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isIndicator="true"
        android:numStars="5"
        android:progressTint="@color/primary"
        android:rating="3"
        android:stepSize="1"
        app:layout_constraintBottom_toBottomOf="@id/name2"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/name2" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/review2"
        android:textAppearance="@style/TextAppearance.Body1"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/name2" />

</androidx.constraintlayout.widget.ConstraintLayout>